🐛 Fix package name and field type
